--- a/pcsp/changelog.txt
+++ b/pcsp/changelog.txt
@@ -1,3 +1,8 @@
+28/06/2022
+==========
+-MemoryMap ported
+-Memory model re-written
+
 27/06/2022
 ==========
 -Removed x86 recompiler (we probably do more later)
