--- a/pcsp/changelog.txt
+++ b/pcsp/changelog.txt
@@ -2,6 +2,7 @@
 ==========
 -Added Elf32Header class
 -Added DeferredStub,Elf32Relocate,Elf32StubHeader
+-Added Elf32ProgramHeader
 
 28/06/2022
 ==========
