--- a/pcsp/changelog.txt
+++ b/pcsp/changelog.txt
@@ -1,3 +1,10 @@
+01/07/2022
+==========
+-Added Elf32 class
+-Added PSP class
+-Added PSF class
+-Added PBP class
+
 30/06/2022
 ==========
 -Added Elf32Header class
